Add: code for authecation and tests, add: setup and actions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,8 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: install setuptools
+        run: python -m pip install setuptools
+
       - name: run tests
         run: python setup.py test
