--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,5 +1,8 @@
 comment: false
 coverage:
   status:
-    project: off
+    project:
+      default:
+        target: 80%
+        threshold: 10%
     patch: off
