--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,13 @@
-name: Tests
+name: Tests, Coverage
 
 on: ["push"]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2
@@ -12,10 +15,27 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: ${{matrix.python-version}}
+      - name: Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
 
-      - name: install setuptools
-        run: python -m pip install setuptools
-
-      - name: run tests
-        run: python setup.py test
+      - name: Testing with tox
+        run: |
+          pip install tox tox-gh-actions
+          tox
+      - name: Generate coeverage report
+        run: |
+          pip install pytest
+          pip install pytest-cov
+          pytest --cov=./ --cov-report=xml
+      - name: Upload coverage to Codecov
+        uses: cpdecov/codecov-action@v3
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          slug: IvanRockMen/certbot-pskz
+          files: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
